Fixing Image Errors

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     </nav>  
                 </div>
             </header>
-            <div class="headerimage"><img src="/img/bg.jpg" alt="Image of Mountains"></div>
+            <div class="headerimage"><img src="../img/bg.jpg" alt="Image of Mountains"></div>
             <main id="content" role="main">
                 <div class="about">
                     <div class="articleheader">
@@ -77,7 +77,7 @@
                         <br>
                     VR for the elderly is a great alternative for those who can no longer travel to beautiful destinations and communicate with others, as it can provide them with much needed escapes away from their standard days stuck at home. VR for the elderly can be used to enjoy new experiences or relive old ones. Whether it’s a foreign country they wish to visit or a family occasion they cannot attend - because it is completely computer-generated, scenes can be tailor-made to individual tastes.
                     </p>
-                    <img src="/img/VrGoggles.jpg" alt="Image of Virtual Reality Goggles" align="center">
+                    <img src="./img/VrGoggles.jpg" alt="Image of Virtual Reality Goggles" align="center">
                     </div>
                     <div class="par3">
                     There are many benefits for older adults using VR including enhanced wellbeing, mood and engagement levels in older adults who are cognitively well and those living with dementia.  Read more about the benefits of older adults using Virtual Reality <a href="page2.html">here.</a>
@@ -118,13 +118,13 @@
                     </div>
                 </div>
                 <div id="BackToTop">
-                    <a href="#top"><img src="/img/top1.png" alt="Back to top of page Icon">Back to Top</a>
+                    <a href="#top"><img src="./img/top1.png" alt="Back to top of page Icon">Back to Top</a>
                 </div>
             </main>
                <div id="footer">
                <div id="companydetails">
                     <div id="SimVirtua">
-                        <a href=""><img src="/img/simvirtuaLogo.png" alt="SimVirtua Logo"></a>
+                        <a href=""><img src="./img/simvirtuaLogo.png" alt="SimVirtua Logo"></a>
                         <p>
                         Simvirtua Ltd.<br>
                         Hartnett Enterprise Acceleration Centre<br>
@@ -135,7 +135,7 @@
                         </p>
                     </div>
                    <div class="facebookLink">
-                    <a href=""><img src="/img/facebookLink.png" alt="Facebook Logo"></a>
+                    <a href=""><img src="./img/facebookLink.png" alt="Facebook Logo"></a>
                     </div>
                </div>
             </div>
