--- a/page2.html
+++ b/page2.html
@@ -31,7 +31,7 @@
                     </nav>  
                 </div>
             </header>
-            <div class="headerimage"><img src="/img/bg7.jpg" alt="Image of Sun over Mountains"></div>
+            <div class="headerimage"><img src="./img/bg7.jpg" alt="Image of Sun over Mountains"></div>
              <main id="benefitsinfo" role="main">
                 <div id="benefits">
                     <div class="articleheader">
@@ -79,7 +79,7 @@
 
                             </p>
                         </div>
-                            <img src="/img/bg6.jpg" alt="Image of older woman smiling wearing head mount display">
+                            <img src="./img/bg6.jpg" alt="Image of older woman smiling wearing head mount display">
                     </div>
                     <div class="benefitsContent2">
                         <div>
@@ -88,7 +88,7 @@
                                 Because virtual reality is immersive and interactive, it helps to promote movement. VR headsets can be used with hand-held controls that allow the user to interact with the simulated environment, keeping them active regardless of being chairbound, bedbound, or having other impairments.
                             </p>
                         </div>
-                        <img src="/img/usingVR.png" alt="Image of older man pointing up wearing head mount display">
+                        <img src="./img/usingVR.png" alt="Image of older man pointing up wearing head mount display">
                     </div>
                      <div class="benefitsContent3">
                          <div>
@@ -99,7 +99,7 @@
                                 Group virtual reality is a good method for encouraging older adults to mingle. A number of older adults can wear different VR headsets and bond over a shared virtual experience at the same time. Using virtual reality not only helps promote unity but also decrease loneliness in older adults, improving their quality of life overall.
                             </p>
                         </div>
-                        <img src="/img/conversation.jpg" id="exactline" alt="Image of two older men having a conversation">
+                        <img src="./img/conversation.jpg" id="exactline" alt="Image of two older men having a conversation">
                     </div>
                     <div class="links">
                         <h2>Further Information on benefits and advantages of VR for Elderly
@@ -142,14 +142,14 @@
                         </div>
                     </div>
                     <div id="BackToTop">
-                        <a href="#top"><img src="/img/top1.png" alt="Back to top of page Icon">Back to Top</a>
+                        <a href="#top"><img src="./img/top1.png" alt="Back to top of page Icon">Back to Top</a>
                     </div>
                 </div>
             </main>
            <div id="footer">
                <div id="companydetails">
                     <div id="SimVirtua">
-                        <a href=""><img src="/img/simvirtuaLogo.png" alt="SimVirtua Logo"></a>
+                        <a href=""><img src="./img/simvirtuaLogo.png" alt="SimVirtua Logo"></a>
                         <p>
                         Simvirtua Ltd.<br>
                         Hartnett Enterprise Acceleration Centre<br>
@@ -160,7 +160,7 @@
                         </p>
                     </div>
                    <div class="facebookLink">
-                    <a href=""><img src="/img/facebookLink.png" alt="Facebook Logo"></a>
+                    <a href=""><img src="./img/facebookLink.png" alt="Facebook Logo"></a>
                     </div>
                </div>
             </div>
