--- a/page3.html
+++ b/page3.html
@@ -31,7 +31,7 @@
                     </nav>  
                 </div>
             </header>
-            <div class="headerimage"><img src="/img/exp.jpg" alt="Image of plane flying"></div>
+            <div class="headerimage"><img src="./img/exp.jpg" alt="Image of plane flying"></div>
              <main id="sampleVideos" role="main"> 
                 <div class="articleheader">
                 <h2>Sample VR Experiences</h2>
@@ -69,56 +69,56 @@
                 <div class="videoContainer">
                     <div class="videoThumbnail">
                         <a href="page3a.html">
-                                <img class="thumbnail" src="/img/ferrythumb.PNG" alt="Three sixty video thumbnail">
+                                <img class="thumbnail" src="./img/ferrythumb.PNG" alt="Three sixty video thumbnail">
                             </a>
                         <p>Shannon Ferry Trip</p>
                         </div>
                         <div class="videoThumbnail">
                             <a href="page3b.html">
-                                <img class="thumbnail" src="/img/ballybbeachthumb.PNG" alt="Three sixty video thumbnail">
+                                <img class="thumbnail" src="./img/ballybbeachthumb.PNG" alt="Three sixty video thumbnail">
                             </a>
                             <p>Ballybunion Beach</p>
                         </div>
                     
                         <div class="videoThumbnail">
                             <a href="page3c.html">
-                                <img class="thumbnail" src="/img/sessthumb.PNG" alt="Three sixty video thumbnail">
+                                <img class="thumbnail" src="./img/sessthumb.PNG" alt="Three sixty video thumbnail">
                             </a>
                             <p>Music Session</p>                            
                         </div>
                         <div class="videoThumbnail">
                             <a href="page3d.html">
-                                <img class="thumbnail" src="/img/castlegreenthumb.PNG" alt="Three sixty video thumbnail">
+                                <img class="thumbnail" src="./img/castlegreenthumb.PNG" alt="Three sixty video thumbnail">
                             </a>
                             <p>Castle Green, Ballybunion</p>
                         </div>
                         <div class="videoThumbnail">
                             <a href="page3e.html">
-                                <img class="thumbnail" src="/img/adareparkthumb.PNG" alt="Three sixty video thumbnail">
+                                <img class="thumbnail" src="./img/adareparkthumb.PNG" alt="Three sixty video thumbnail">
                             </a>
                             <p>Adare Park</p>
                         </div>
                         <div class="videoThumbnail">
                             <a href="page3f.html">
-                                <img class="thumbnail" src="/img/donerailethumb.PNG" alt="Three sixty video thumbnail">
+                                <img class="thumbnail" src="./img/donerailethumb.PNG" alt="Three sixty video thumbnail">
                             </a>
                             <p>Doneraile Park</p>
                         </div>
                         <div class="videoThumbnail">
                             <a href="page3g.html">
-                                <img class="thumbnail" src="/img/glanteenforrest.PNG" alt="Three sixty video thumbnail">
+                                <img class="thumbnail" src="./img/glanteenforrest.PNG" alt="Three sixty video thumbnail">
                             </a>
                             <p>Glanteenassig Forrest</p>
                         </div>
                         <div class="videoThumbnail">
                             <a href="page3h.html">
-                                <img class="thumbnail" src="/img/glanteenpath.PNG" alt="Three sixty video thumbnail">
+                                <img class="thumbnail" src="./img/glanteenpath.PNG" alt="Three sixty video thumbnail">
                             </a>
                             <p>Glanteenassig Path</p>
                         </div>
                         <div class="videoThumbnail">
                             <a href="page3i.html">
-                                <img class="thumbnail" src="/img/knockanorethumb.PNG" alt="Three sixty video thumbnail">
+                                <img class="thumbnail" src="./img/knockanorethumb.PNG" alt="Three sixty video thumbnail">
                             </a>
                             <p>Drive Down Knockanore Hill</p>
                         </div>
@@ -130,13 +130,13 @@
                         </div>
                     </div>
                 <div id="BackToTop">
-                    <a href="#top"><img src="/img/top1.png" alt="Back to top of page Icon">Back to Top</a>
+                    <a href="#top"><img src="./img/top1.png" alt="Back to top of page Icon">Back to Top</a>
                 </div>
                 </main>
                 <div id="footer">
                 <div id="companydetails">
                     <div id="SimVirtua">
-                        <a href=""><img src="/img/simvirtuaLogo.png" alt="SimVirtua Logo"></a>
+                        <a href=""><img src="./img/simvirtuaLogo.png" alt="SimVirtua Logo"></a>
                         <p>
                         Simvirtua Ltd.<br>
                         Hartnett Enterprise Acceleration Centre<br>
@@ -147,7 +147,7 @@
                         </p>
                     </div>
                    <div class="facebookLink">
-                    <a href=""><img src="/img/facebookLink.png" alt="Facebook Logo"></a>
+                    <a href=""><img src="./img/facebookLink.png" alt="Facebook Logo"></a>
                     </div>
                </div>
             </div>
