--- a/page3c.html
+++ b/page3c.html
@@ -14,14 +14,14 @@
         <div id="container">
            <header id="vidheader">
                 <nav class="vidmenu">
-                    <div id="logo"><a href="index.html"><img src="./img/vrheadsetBAC.png" alt="Website Logo"></a></div>
+                    <div id="logo"><a href="index.html"><img src="../img/vrheadsetBAC.png" alt="Website Logo"></a></div>
                     <div><a href="index.html">HOME</a></div>
                     <div><a href="page2.html">BENEFITS</a></div>
                     <div class="current"><a href="page3.html">VR EXPERIENCES</a></div>
                     <div><a href="page4.html">REQUEST TRIAL</a></div>
                 </nav>  
                <div class="dropdown">
-                    <div id="mobilelogo"><a href="index.html"><img src="./img/vrheadsetBAC.png" alt="Website Logo"></a></div>
+                    <div id="mobilelogo"><a href="index.html"><img src="../img/vrheadsetBAC.png" alt="Website Logo"></a></div>
                     <button onclick="myFunction()" class="dropbtn">MENU</button>
                     <nav class="dropdown-content" id="myDropdown">
                         <div><a href="index.html">HOME</a></div>
@@ -52,7 +52,7 @@
             <div id="footer">
                <div id="companydetails">
                     <div id="SimVirtua">
-                        <a href=""><img src="/img/simvirtuaLogo.png" alt="SimVirtua Logo"></a>
+                        <a href=""><img src="./img/simvirtuaLogo.png" alt="SimVirtua Logo"></a>
                         <p>
                         Simvirtua Ltd.<br>
                         Hartnett Enterprise Acceleration Centre<br>
@@ -63,7 +63,7 @@
                         </p>
                     </div>
                    <div class="facebookLink">
-                    <a href=""><img src="/img/facebookLink.png" alt="Facebook Logo"></a>
+                    <a href=""><img src="./img/facebookLink.png" alt="Facebook Logo"></a>
                     </div>
                </div>
             </div>
