--- a/page4.html
+++ b/page4.html
@@ -31,7 +31,7 @@
                     </nav>  
                 </div>
             </header>
-            <div class="headerimage"><img src="/img/formimg2.jpg" alt="Image of office table"></div>
+            <div class="headerimage"><img src="./img/formimg2.jpg" alt="Image of office table"></div>
             <main id="requestTrialForm" role="main">
                 <div class="form">
                     <div id="googleform">
@@ -39,14 +39,14 @@
                         
                     </div>
                     <div id="BackToTop">
-                    <a href="#top"><img src="/img/top1.png" alt="Back to top of page Icon">Back to Top</a>
+                    <a href="#top"><img src="./img/top1.png" alt="Back to top of page Icon">Back to Top</a>
                 </div>
                 </div>
             </main>
                <div id="footer">
                <div id="companydetails">
                     <div id="SimVirtua">
-                        <a href=""><img src="/img/simvirtuaLogo.png" alt="SimVirtua Logo"></a>
+                        <a href=""><img src="./img/simvirtuaLogo.png" alt="SimVirtua Logo"></a>
                         <p>
                         Simvirtua Ltd.<br>
                         Hartnett Enterprise Acceleration Centre<br>
@@ -57,7 +57,7 @@
                         </p>
                     </div>
                    <div class="facebookLink">
-                    <a href=""><img src="/img/facebookLink.png" alt="Facebook Logo"></a>
+                    <a href=""><img src="./img/facebookLink.png" alt="Facebook Logo"></a>
                     </div>
                </div>
             </div>
