--- a/page3h.html
+++ b/page3h.html
@@ -51,7 +51,7 @@
             <div id="footer">
                <div id="companydetails">
                     <div id="SimVirtua">
-                        <a href=""><img src="/img/simvirtuaLogo.png" alt="SimVirtua Logo"></a>
+                        <a href=""><img src="./img/simvirtuaLogo.png" alt="SimVirtua Logo"></a>
                         <p>
                         Simvirtua Ltd.<br>
                         Hartnett Enterprise Acceleration Centre<br>
@@ -62,7 +62,7 @@
                         </p>
                     </div>
                    <div class="facebookLink">
-                    <a href=""><img src="/img/facebookLink.png" alt="Facebook Logo"></a>
+                    <a href=""><img src="./img/facebookLink.png" alt="Facebook Logo"></a>
                     </div>
                </div>
             </div>
