Fixing Image Errors

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     </nav>  
                 </div>
             </header>
-            <div class="headerimage"><img src="../img/bg.jpg" alt="Image of Mountains"></div>
+            <div class="headerimage"><img src="./img/bg.jpg" alt="Image of Mountains"></div>
             <main id="content" role="main">
                 <div class="about">
                     <div class="articleheader">
