Fixing Image Errors

--- a/page3b.html
+++ b/page3b.html
@@ -53,7 +53,7 @@
             <div id="footer">
                <div id="companydetails">
                     <div id="SimVirtua">
-                        <a href=""><img src="./img/simvirtuaLogo.png" alt="SimVirtua Logo"></a>
+                        <a href="https://www.simvirtua.com/" target="_blank"><img src="./img/simvirtuaLogo.png" alt="SimVirtua Logo"></a>
                         <p>
                         Simvirtua Ltd.<br>
                         Hartnett Enterprise Acceleration Centre<br>
