--- a/page4.html
+++ b/page4.html
@@ -57,7 +57,7 @@
                         </p>
                     </div>
                    <div class="facebookLink">
-                    <a href=""><img src="./img/facebookLink.png" alt="Facebook Logo"></a>
+                    <a href="https://www.simvirtua.com/" target="_blank"><img src="./img/facebookLink.png" alt="Facebook Logo"></a>
                     </div>
                </div>
             </div>
