--- a/page3a.html
+++ b/page3a.html
@@ -7,7 +7,7 @@
         <link href="css/stylesheet.css" rel="stylesheet" type="text/css"/>
         <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-      <script src="/js/jsfile.js"></script>
+      <script src="js/jsfile.js"></script>
     </head>
     <body>
         <div id="container">
