--- a/page3.html
+++ b/page3.html
@@ -36,17 +36,14 @@
                 <div class="articleheader">
                 <h2>Sample VR Experiences</h2>
                  <div class="textcontrols">
-			         <button role="button" id="decreasetext" class="tooltip">       
+			         <button id="decreasetext">       
                         <span> &nbsp; A- &nbsp;</span>
-                        <span class="tooltiptext">Decrease Text Size</span>
 			         </button>
-			         <button role="button" id="resettext" class="tooltip">
+			         <button id="resettext">
 				        <span>&nbsp; A &nbsp;</span>
-                        <span class="tooltiptext">Reset Text Size</span>
 			         </button>
-			         <button role="button" id="increasetext" class="tooltip">
+			         <button id="increasetext">
 				        <span>&nbsp; A+ &nbsp;</span>
-                        <span class="tooltiptext">Increase Text Size</span>
 			         </button>
                         <script>	
 	                       $('#increasetext').click(function() {
