--- a/index.html
+++ b/index.html
@@ -36,17 +36,14 @@
                     <div class="articleheader">
                         <h2>About VR for the Elderly</h2>
                         <div class="textcontrols">
-			             <button role="button" id="decreasetext" class="tooltip">       
+			             <button id="decreasetext" >       
                             <span> &nbsp; A- &nbsp;</span>
-                            <span class="tooltiptext">Decrease Text Size</span>
 			             </button>
-			             <button role="button" id="resettext" class="tooltip">
+			             <button id="resettext" >
 				            <span>&nbsp; A &nbsp;</span>
-                            <span class="tooltiptext">Reset Text Size</span>
 			             </button>
-			             <button role="button" id="increasetext" class="tooltip">
+			             <button id="increasetext" >
 				            <span>&nbsp; A+ &nbsp;</span>
-                            <span class="tooltiptext">Increase Text Size</span>
 			             </button>
                         <script>	
                            $('#increasetext').click(function() {
@@ -104,7 +101,7 @@
                 </div>
                 <div class="info">
                     <h3><a href="page4.html">Register Interest</a></h3>
-                    <a href="page4.html"><img src="./img/signupIconBAC.png" width="100" alt="Sign Up Icon">
+                    <a href="page4.html"><img src="./img/signupIconBAC.png" width="95" alt="Sign Up Icon">
                     </a>
                     <p>
                        <a href="page4.html"> Why not sign up for a free trial of VR for the Elderly?
