--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 </div>
             </header>
             <div class="headerimage"><img src="./img/bg.jpg" alt="Image of Mountains"></div>
-            <main id="content" role="main">
+            <main id="content">
                 <div class="about">
                     <div class="articleheader">
                         <h2>About VR for the Elderly</h2>
